updating email sending during customer registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ applicationAdminEmail=info@mentors.cz
 applicationAdminPhone=8888888888
 allowPublicUserRegistration=true
 generateUserPasswordOnRegistration=false
+reguireRegisteredUserEmailConfirmation=true
+reguireRegisteredUserAdminApproval=true
 
 #APPLICATION CUSTOM VARIABLES
 template.welcome.path=/templates/welcome-template
