Updating AuthenticationServiceImpl.java - implemented new password generation strategy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.application.description=Spring Boot Application Starter
 applicationAdminName=Admin
 applicationAdminEmail=info@mentors.cz
 applicationAdminPhone=8888888888
+
+application.core.base-url="http://localhost:8080
+application.core.api-version="/api/v1
+
+
 allowPublicUserRegistration=true
 generateUserPasswordOnRegistration=false
 reguireRegisteredUserEmailConfirmation=true
