--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	testImplementation 'org.springframework:spring-webflux'
 	testImplementation 'org.springframework.graphql:spring-graphql-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation("jakarta.validation:jakarta.validation-api:3.1.1")
+	implementation("io.swagger.core.v3:swagger-annotations:2.2.34")
 }
 
 tasks.named('test') {
