Updating app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ applicationAdminPhone=8888888888
 application.core.base-url="http://localhost:8080
 application.core.api-version="/api/v1
 
+app.cors.allowed-origins=http://localhost:5173
 
 allowPublicUserRegistration=true
 generateUserPasswordOnRegistration=false
