--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation("jakarta.validation:jakarta.validation-api:3.1.1")
 	implementation("io.swagger.core.v3:swagger-annotations:2.2.38")
+	implementation("io.hypersistence:hypersistence-utils-hibernate-63:3.13.3")
 }
 
 tasks.named('test') {
