--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
@@ -47,6 +47,12 @@ jwt:
 
 # Application Settings
 app:
+
+  frontend:
+    base-url: http://localhost:5173
+    activation-endpoint: /auth/activate
+    activation-token-expiry: 24
+
   # CORS Configuration
   cors:
     allowed-origins: http://localhost:5173,http://localhost:3000
