--- a/src/main/resources/docker-compose.yaml
+++ b/src/main/resources/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - local_pgdata:/var/lib/postgresql/data
+      - local_pgdata:/var/lib/postgresql
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
