--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,21 @@ plugins {
 }
 
 group = 'com.mentors'
-version = '0.0.1-SNAPSHOT'
+version = project.findProperty("revision") ?: "0.0.0-SNAPSHOT"
+
+bootJar {
+    // Use project property for application name or default
+    def appName = project.findProperty("appName") ?: "application-starter"
+    archiveFileName = "${appName}-${version}.jar"
+}
+
 
 java {
 	sourceCompatibility = '23'
+}
+
+springBoot {
+    buildInfo()
 }
 
 configurations {
@@ -43,6 +54,7 @@ dependencies {
 	implementation("jakarta.validation:jakarta.validation-api:3.1.1")
 	implementation("io.swagger.core.v3:swagger-annotations:2.2.38")
 	implementation("io.hypersistence:hypersistence-utils-hibernate-63:3.13.3")
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
