--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -102,4 +102,16 @@ management:
   endpoints:
     web:
       exposure:
-        include: info
+        include: health
+      base-path: /actuator
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+      probes:
+        enabled: true
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
