--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -203,55 +203,55 @@ jobs:
         run: |
           echo "❌ Tests failed - blocking pipeline"
           exit 1
-
-  # ============================================
-  # JOB 2: Integration Tests
-  # ============================================
-  integration-test:
-    name: Run Integration Tests
-    runs-on: ubuntu-latest
-    needs: test
-    permissions:
-      contents: read
-      checks: write
-      pull-requests: write
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 23
-        uses: actions/setup-java@v4
-        with:
-          java-version: '23'
-          distribution: 'temurin'
-          cache: 'gradle'
-
-      - name: Grant Execute Permission
-        run: chmod +x gradlew
-
-      - name: Run Integration Tests
-        run: |
-          echo "🔗 Running integration tests..."
-          ./gradlew integrationTest --info --stacktrace
-        continue-on-error: true
-
-      - name: Publish Integration Test Report
-        uses: dorny/test-reporter@v1
-        if: always()
-        with:
-          name: Integration Test Results
-          path: 'build/test-results/integrationTest/*.xml'
-          reporter: java-junit
-          fail-on-error: true
-
-      - name: Upload Integration Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: integration-test-results
-          path: build/reports/tests/integrationTest/
-          retention-days: 30
+#
+#  # ============================================
+#  # JOB 2: Integration Tests
+#  # ============================================
+#  integration-test:
+#    name: Run Integration Tests
+#    runs-on: ubuntu-latest
+#    needs: test
+#    permissions:
+#      contents: read
+#      checks: write
+#      pull-requests: write
+#
+#    steps:
+#      - name: Checkout Code
+#        uses: actions/checkout@v4
+#
+#      - name: Set up JDK 23
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '23'
+#          distribution: 'temurin'
+#          cache: 'gradle'
+#
+#      - name: Grant Execute Permission
+#        run: chmod +x gradlew
+#
+#      - name: Run Integration Tests
+#        run: |
+#          echo "🔗 Running integration tests..."
+#          ./gradlew integrationTest --info --stacktrace
+#        continue-on-error: true
+#
+#      - name: Publish Integration Test Report
+#        uses: dorny/test-reporter@v1
+#        if: always()
+#        with:
+#          name: Integration Test Results
+#          path: 'build/test-results/integrationTest/*.xml'
+#          reporter: java-junit
+#          fail-on-error: true
+#
+#      - name: Upload Integration Test Results
+#        if: always()
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: integration-test-results
+#          path: build/reports/tests/integrationTest/
+#          retention-days: 30
 
   # ============================================
   # JOB 3: Code Quality & Security
