--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -362,7 +362,8 @@ jobs:
   deploy:
     name: Deploy to AWS ECS
     runs-on: ubuntu-latest
-    needs: [test, code-quality, build-validation]
+    needs: [code-quality, build-validation]
+    #    needs: [test, integration-test, code-quality, build-validation]
     if: github.ref == 'refs/heads/master'
 
     steps:
