--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -361,7 +361,7 @@ jobs:
   deploy:
     name: Deploy to AWS ECS
     runs-on: ubuntu-latest
-    needs: [code-quality, build-validation]
+    needs: [build-validation]
     #    needs: [test, integration-test, code-quality, build-validation]
     if: github.ref == 'refs/heads/master'
 
