--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,10 @@ dependencies {
 	implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.13.3'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+
+	//AWS
+	implementation 'software.amazon.awssdk:s3:2.20.26'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
